// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`allow a loose specifier of a theme direcory > valid.5.config.js 1`] = `
Object {
  "author": "pkgAuthor",
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/manuscript.html",
      "themes": Array [
        Object {
          "importPath": undefined,
          "location": "__WORKSPACE__/tests/fixtures/config/themes/packages/foo",
          "name": "foo",
          "specifier": "__WORKSPACE__/tests/fixtures/config/themes/foo",
          "type": "package",
        },
      ],
      "title": "pkgName",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/publication.json",
    "format": "pub-manifest",
  },
  "language": undefined,
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/publication.json",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
      "preflight": null,
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/themes/packages/foo",
      "name": "foo",
      "specifier": "__WORKSPACE__/tests/fixtures/config/themes/foo",
      "type": "package",
    },
  ],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/themes/packages/foo",
      "name": "foo",
      "specifier": "__WORKSPACE__/tests/fixtures/config/themes/foo",
      "type": "package",
    },
  },
  "themesDir": "__WORKSPACE__/tests/fixtures/config/themes",
  "timeout": 120000,
  "title": "pkgName",
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`imports a EPUB OPF file 1`] = `
Object {
  "author": undefined,
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/epubs/adaptive/OPS",
  "epubOpfPath": "__WORKSPACE__/tests/fixtures/epubs/adaptive/OPS/content.opf",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/epubs/adaptive/OPS/content.opf",
    "format": "epub-opf",
  },
  "language": undefined,
  "logLevel": "info",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/epub-opf.pdf",
      "preflight": null,
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/tests/fixtures/epubs/adaptive/OPS/themes",
  "timeout": 120000,
  "title": undefined,
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/epubs/adaptive/OPS",
}
`;

exports[`imports a EPUB file 1`] = `
Object {
  "author": undefined,
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/epubs",
  "epubOpfPath": "__SNIP__",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/epubs/adaptive.epub",
    "format": "epub",
  },
  "language": undefined,
  "logLevel": "info",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/epub.pdf",
      "preflight": null,
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/tests/fixtures/epubs/themes",
  "timeout": 120000,
  "title": undefined,
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/epubs",
}
`;

exports[`imports a https URL 1`] = `
Object {
  "author": undefined,
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [],
  "entryContextDir": "__WORKSPACE__",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "https://vivliostyle.github.io/vivliostyle_doc/ja/vivliostyle-user-group-vol1/",
    "format": "webbook",
  },
  "language": undefined,
  "logLevel": "info",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/output.pdf",
      "preflight": null,
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/themes",
  "timeout": 120000,
  "title": undefined,
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "webbookEntryUrl": "https://vivliostyle.github.io/vivliostyle_doc/ja/vivliostyle-user-group-vol1/",
  "workspaceDir": "__WORKSPACE__",
}
`;

exports[`imports a webbook compliant to Readium Web publication 1`] = `
Object {
  "author": undefined,
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/webbooks/readium-webpub",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/webbooks/readium-webpub/manifest.jsonld",
    "format": "pub-manifest",
  },
  "language": undefined,
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/webbooks/readium-webpub/manifest.jsonld",
  "outputs": Array [
    Object {
      "format": "webpub",
      "path": "__WORKSPACE__/readium-webpub",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/tests/fixtures/webbooks/readium-webpub/themes",
  "timeout": 120000,
  "title": undefined,
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/webbooks/readium-webpub",
}
`;

exports[`imports a webbook compliant to W3C Web publication 1`] = `
Object {
  "author": undefined,
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/webbooks/w3c-webpub",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/webbooks/w3c-webpub/publication.json",
    "format": "pub-manifest",
  },
  "language": undefined,
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/webbooks/w3c-webpub/publication.json",
  "outputs": Array [
    Object {
      "format": "webpub",
      "path": "__WORKSPACE__/w3c-webpub",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/tests/fixtures/webbooks/w3c-webpub/themes",
  "timeout": 120000,
  "title": undefined,
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/webbooks/w3c-webpub",
}
`;

exports[`imports single html file 1`] = `
Object {
  "author": undefined,
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/sample.html",
    "format": "webbook",
  },
  "language": undefined,
  "logLevel": "info",
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/output.pdf",
      "preflight": null,
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/tests/fixtures/config/themes",
  "timeout": 120000,
  "title": undefined,
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "webbookEntryUrl": "file://__WORKSPACE__/tests/fixtures/config/sample.html",
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`override option by CLI command > valid.1.config.js 1`] = `
Object {
  "author": "myAuthor",
  "bleed": undefined,
  "browserType": "firefox",
  "copyAsset": Object {
    "excludes": Array [
      "*a*",
    ],
    "fileExtensions": Array [
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
      "zip",
    ],
    "includes": Array [
      "xx/yy",
      "**/zz",
    ],
  },
  "cover": Object {
    "htmlPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
    "name": "Cover image alt",
    "src": "__WORKSPACE__/tests/fixtures/config/cover.png",
  },
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": "https://vivlostyle.org",
  "customUserStyle": "file://__WORKSPACE__/user/style/dummy.css",
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "coverImageAlt": "Cover image alt",
      "coverImageSrc": "__WORKSPACE__/tests/fixtures/config/cover.png",
      "rel": "cover",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
      "themes": Array [],
      "title": "myTitle",
    },
    Object {
      "rel": "contents",
      "sectionDepth": 6,
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/toc.html",
      "themes": Array [
        Object {
          "location": "https://myTheme.example.com",
          "name": "myTheme.example.com",
          "type": "uri",
        },
      ],
      "tocTitle": "TOC",
      "transform": Object {
        "transformDocumentList": undefined,
        "transformSectionList": undefined,
      },
    },
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/manuscript.html",
      "themes": Array [
        Object {
          "location": "https://myTheme.example.com",
          "name": "myTheme.example.com",
          "type": "uri",
        },
      ],
      "title": "myTitle",
      "type": "text/markdown",
    },
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/manuscript.html",
      "themes": Array [
        Object {
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
          "name": "theme.css",
          "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
          "type": "file",
        },
      ],
      "title": "title",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": true,
  "ignoreHttpsErrors": true,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
    "format": "pub-manifest",
  },
  "language": "myLanguage",
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/yuno.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
    Object {
      "format": "webpub",
      "path": "__WORKSPACE__/yuno",
    },
  ],
  "proxy": Object {
    "bypass": ".example.com",
    "password": "proxy-auth-password",
    "server": "http://localhost:3128",
    "username": "proxy-auth-user",
  },
  "quick": false,
  "readingProgression": "rtl",
  "rootThemes": Array [
    Object {
      "location": "https://myTheme.example.com",
      "name": "myTheme.example.com",
      "type": "uri",
    },
  ],
  "sandbox": false,
  "singleDoc": false,
  "size": Object {
    "format": "JIS-B5",
  },
  "themeIndexes": Set {
    Object {
      "location": "https://myTheme.example.com",
      "name": "myTheme.example.com",
      "type": "uri",
    },
    Object {
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
      "name": "theme.css",
      "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
      "type": "file",
    },
  },
  "themesDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes",
  "timeout": 42000,
  "title": "myTitle",
  "vfmOptions": Object {
    "disableFormatHtml": true,
    "hardLineBreaks": true,
  },
  "viewer": "https://vivliostyle.org/viewer/",
  "viewerParam": "allowScripts=false&pixelRatio=16",
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir",
}
`;

exports[`override option by environment variable > valid.1.config.js 1`] = `
Object {
  "author": "author",
  "bleed": undefined,
  "browserType": "firefox",
  "copyAsset": Object {
    "excludes": Array [
      "*a*",
    ],
    "fileExtensions": Array [
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
      "zip",
    ],
    "includes": Array [
      "xx/yy",
      "**/zz",
    ],
  },
  "cover": Object {
    "htmlPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
    "name": "Cover image alt",
    "src": "__WORKSPACE__/tests/fixtures/config/cover.png",
  },
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "coverImageAlt": "Cover image alt",
      "coverImageSrc": "__WORKSPACE__/tests/fixtures/config/cover.png",
      "rel": "cover",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
      "themes": Array [],
      "title": "title",
    },
    Object {
      "rel": "contents",
      "sectionDepth": 6,
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/toc.html",
      "themes": Array [
        Object {
          "importPath": undefined,
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
          "name": "debug-theme",
          "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
          "type": "package",
        },
      ],
      "tocTitle": "TOC",
      "transform": Object {
        "transformDocumentList": undefined,
        "transformSectionList": undefined,
      },
    },
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/manuscript.html",
      "themes": Array [
        Object {
          "importPath": undefined,
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
          "name": "debug-theme",
          "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
          "type": "package",
        },
      ],
      "title": "title",
      "type": "text/markdown",
    },
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/manuscript.html",
      "themes": Array [
        Object {
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
          "name": "theme.css",
          "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
          "type": "file",
        },
      ],
      "title": "title",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
    "format": "pub-manifest",
  },
  "language": "language",
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output2.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": Object {
    "bypass": "bypass.example.com",
    "password": undefined,
    "server": "https://localhost:9001",
    "username": undefined,
  },
  "quick": false,
  "readingProgression": "rtl",
  "rootThemes": Array [
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
      "name": "debug-theme",
      "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
      "type": "package",
    },
  ],
  "sandbox": false,
  "singleDoc": false,
  "size": Object {
    "format": "size",
  },
  "themeIndexes": Set {
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
      "name": "debug-theme",
      "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
      "type": "package",
    },
    Object {
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
      "name": "theme.css",
      "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
      "type": "file",
    },
  },
  "themesDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes",
  "timeout": 1,
  "title": "title",
  "vfmOptions": Object {
    "disableFormatHtml": true,
    "hardLineBreaks": true,
  },
  "viewer": undefined,
  "viewerParam": "foo=bar",
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir",
}
`;

exports[`parse array of config > valid.1.config.js 1`] = `
Object {
  "author": "author",
  "bleed": undefined,
  "browserType": "firefox",
  "copyAsset": Object {
    "excludes": Array [
      "*a*",
    ],
    "fileExtensions": Array [
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
      "zip",
    ],
    "includes": Array [
      "xx/yy",
      "**/zz",
    ],
  },
  "cover": Object {
    "htmlPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
    "name": "Cover image alt",
    "src": "__WORKSPACE__/tests/fixtures/config/cover.png",
  },
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "coverImageAlt": "Cover image alt",
      "coverImageSrc": "__WORKSPACE__/tests/fixtures/config/cover.png",
      "rel": "cover",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
      "themes": Array [],
      "title": "title",
    },
    Object {
      "rel": "contents",
      "sectionDepth": 6,
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/toc.html",
      "themes": Array [
        Object {
          "importPath": undefined,
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
          "name": "debug-theme",
          "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
          "type": "package",
        },
      ],
      "tocTitle": "TOC",
      "transform": Object {
        "transformDocumentList": undefined,
        "transformSectionList": undefined,
      },
    },
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/manuscript.html",
      "themes": Array [
        Object {
          "importPath": undefined,
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
          "name": "debug-theme",
          "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
          "type": "package",
        },
      ],
      "title": "title",
      "type": "text/markdown",
    },
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/manuscript.html",
      "themes": Array [
        Object {
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
          "name": "theme.css",
          "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
          "type": "file",
        },
      ],
      "title": "title",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
    "format": "pub-manifest",
  },
  "language": "language",
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output2.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": "rtl",
  "rootThemes": Array [
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
      "name": "debug-theme",
      "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
      "type": "package",
    },
  ],
  "sandbox": false,
  "singleDoc": false,
  "size": Object {
    "format": "size",
  },
  "themeIndexes": Set {
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
      "name": "debug-theme",
      "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
      "type": "package",
    },
    Object {
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
      "name": "theme.css",
      "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
      "type": "file",
    },
  },
  "themesDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes",
  "timeout": 1,
  "title": "title",
  "vfmOptions": Object {
    "disableFormatHtml": true,
    "hardLineBreaks": true,
  },
  "viewer": undefined,
  "viewerParam": "foo=bar",
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir",
}
`;

exports[`parse array of config > valid.2.config.js 1`] = `
Object {
  "author": "pkgAuthor",
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/manuscript.html",
      "themes": Array [],
      "title": "pkgName",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/publication.json",
    "format": "pub-manifest",
  },
  "language": undefined,
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/publication.json",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
      "preflight": null,
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/tests/fixtures/config/themes",
  "timeout": 120000,
  "title": "pkgName",
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`parse array of config > valid.3.config.js 1`] = `
Object {
  "author": "pkgAuthor",
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/manuscript.html",
      "themes": Array [],
      "title": "example",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/publication.json",
    "format": "pub-manifest",
  },
  "language": undefined,
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/publication.json",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/example.pdf",
      "preflight": null,
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/tests/fixtures/config/themes",
  "timeout": 120000,
  "title": "example",
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`parse vivliostyle config > valid.1.config.js 1`] = `
Object {
  "author": "author",
  "bleed": undefined,
  "browserType": "firefox",
  "copyAsset": Object {
    "excludes": Array [
      "*a*",
    ],
    "fileExtensions": Array [
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
      "zip",
    ],
    "includes": Array [
      "xx/yy",
      "**/zz",
    ],
  },
  "cover": Object {
    "htmlPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
    "name": "Cover image alt",
    "src": "__WORKSPACE__/tests/fixtures/config/cover.png",
  },
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "coverImageAlt": "Cover image alt",
      "coverImageSrc": "__WORKSPACE__/tests/fixtures/config/cover.png",
      "rel": "cover",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
      "themes": Array [],
      "title": "title",
    },
    Object {
      "rel": "contents",
      "sectionDepth": 6,
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/toc.html",
      "themes": Array [
        Object {
          "importPath": undefined,
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
          "name": "debug-theme",
          "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
          "type": "package",
        },
      ],
      "tocTitle": "TOC",
      "transform": Object {
        "transformDocumentList": undefined,
        "transformSectionList": undefined,
      },
    },
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/manuscript.html",
      "themes": Array [
        Object {
          "importPath": undefined,
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
          "name": "debug-theme",
          "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
          "type": "package",
        },
      ],
      "title": "title",
      "type": "text/markdown",
    },
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/manuscript.html",
      "themes": Array [
        Object {
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
          "name": "theme.css",
          "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
          "type": "file",
        },
      ],
      "title": "title",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
    "format": "pub-manifest",
  },
  "language": "language",
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output2.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": "rtl",
  "rootThemes": Array [
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
      "name": "debug-theme",
      "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
      "type": "package",
    },
  ],
  "sandbox": false,
  "singleDoc": false,
  "size": Object {
    "format": "size",
  },
  "themeIndexes": Set {
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
      "name": "debug-theme",
      "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
      "type": "package",
    },
    Object {
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/theme.css",
      "name": "theme.css",
      "source": "__WORKSPACE__/tests/fixtures/config/theme.css",
      "type": "file",
    },
  },
  "themesDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes",
  "timeout": 1,
  "title": "title",
  "vfmOptions": Object {
    "disableFormatHtml": true,
    "hardLineBreaks": true,
  },
  "viewer": undefined,
  "viewerParam": "foo=bar",
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir",
}
`;

exports[`parse vivliostyle config > valid.2.config.js 1`] = `
Object {
  "author": "pkgAuthor",
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/manuscript.html",
      "themes": Array [],
      "title": "pkgName",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/publication.json",
    "format": "pub-manifest",
  },
  "language": undefined,
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/publication.json",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
      "preflight": null,
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/tests/fixtures/config/themes",
  "timeout": 120000,
  "title": "pkgName",
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`parse vivliostyle config > valid.3.config.js 1`] = `
Object {
  "author": "pkgAuthor",
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/manuscript.md",
      "target": "__WORKSPACE__/tests/fixtures/config/manuscript.html",
      "themes": Array [],
      "title": "example",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/publication.json",
    "format": "pub-manifest",
  },
  "language": undefined,
  "logLevel": "info",
  "manifestPath": "__WORKSPACE__/tests/fixtures/config/publication.json",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/example.pdf",
      "preflight": null,
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/tests/fixtures/config/themes",
  "timeout": 120000,
  "title": "example",
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;

exports[`yields a config with single input and vivliostyle config 1`] = `
Object {
  "author": "author",
  "bleed": undefined,
  "browserType": "firefox",
  "copyAsset": Object {
    "excludes": Array [
      "*a*",
    ],
    "fileExtensions": Array [
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
      "zip",
    ],
    "includes": Array [
      "xx/yy",
      "**/zz",
    ],
  },
  "cover": Object {
    "htmlPath": "__WORKSPACE__/tests/fixtures/config/workspaceDir/mycover.html",
    "name": "Cover image alt",
    "src": "__WORKSPACE__/tests/fixtures/config/cover.png",
  },
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/nestedDir/01.md",
      "target": "__SNIP__",
      "themes": Array [
        Object {
          "importPath": undefined,
          "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
          "name": "debug-theme",
          "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
          "type": "package",
        },
      ],
      "title": "Yuno",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": Array [
    Object {
      "source": "__SNIP__",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/nestedDir/01.html",
    },
    Object {
      "source": "__SNIP__",
      "target": "__WORKSPACE__/tests/fixtures/config/workspaceDir/publication.json",
    },
  ],
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/nestedDir/01.md",
    "format": "markdown",
  },
  "language": "language",
  "logLevel": "info",
  "manifestPath": "__SNIP__",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output1.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/fixtures/config/output2.pdf",
      "preflight": "press-ready",
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": "rtl",
  "rootThemes": Array [
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
      "name": "debug-theme",
      "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
      "type": "package",
    },
  ],
  "sandbox": false,
  "singleDoc": false,
  "size": Object {
    "format": "size",
  },
  "themeIndexes": Set {
    Object {
      "importPath": undefined,
      "location": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes/packages/debug-theme",
      "name": "debug-theme",
      "specifier": "__WORKSPACE__/tests/fixtures/themes/debug-theme",
      "type": "package",
    },
  },
  "themesDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir/themes",
  "timeout": 1,
  "title": "title",
  "vfmOptions": Object {
    "disableFormatHtml": true,
    "hardLineBreaks": true,
  },
  "viewer": undefined,
  "viewerParam": "foo=bar",
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config/workspaceDir",
}
`;

exports[`yields a config with single markdown 1`] = `
Object {
  "author": undefined,
  "bleed": undefined,
  "browserType": "chromium",
  "copyAsset": Object {
    "excludes": Array [],
    "fileExtensions": Array [
      "png",
      "jpg",
      "jpeg",
      "svg",
      "gif",
      "webp",
      "apng",
      "ttf",
      "otf",
      "woff",
      "woff2",
    ],
    "includes": Array [],
  },
  "cover": undefined,
  "cropMarks": false,
  "cropOffset": undefined,
  "css": undefined,
  "customStyle": undefined,
  "customUserStyle": undefined,
  "documentProcessorFactory": [Function],
  "entries": Array [
    Object {
      "source": "__WORKSPACE__/tests/fixtures/config/sample.md",
      "target": "__SNIP__",
      "themes": Array [],
      "title": "Yuno",
      "type": "text/markdown",
    },
  ],
  "entryContextDir": "__WORKSPACE__/tests/fixtures/config",
  "executableBrowser": "__EXECUTABLE_CHROMIUM_PATH__",
  "exportAliases": "__SNIP__",
  "httpServer": false,
  "ignoreHttpsErrors": false,
  "image": "__IMAGE__",
  "input": Object {
    "entry": "__WORKSPACE__/tests/fixtures/config/sample.md",
    "format": "markdown",
  },
  "language": undefined,
  "logLevel": "info",
  "manifestPath": "__SNIP__",
  "needToGenerateManifest": true,
  "outputs": Array [
    Object {
      "format": "pdf",
      "path": "__WORKSPACE__/tests/output.pdf",
      "preflight": null,
      "preflightOption": Array [],
      "renderMode": "local",
    },
  ],
  "proxy": undefined,
  "quick": false,
  "readingProgression": undefined,
  "rootThemes": Array [],
  "sandbox": false,
  "singleDoc": false,
  "size": undefined,
  "themeIndexes": Set {},
  "themesDir": "__WORKSPACE__/tests/fixtures/config/themes",
  "timeout": 120000,
  "title": "Yuno",
  "vfmOptions": Object {
    "disableFormatHtml": false,
    "hardLineBreaks": false,
  },
  "viewer": undefined,
  "viewerParam": undefined,
  "workspaceDir": "__WORKSPACE__/tests/fixtures/config",
}
`;
